--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
-  background-image: url(https://i.pinimg.com/originals/a9/12/25/a9122539bc17f0b49c3664cf0cf5e43a.jpg);
+  background-image: url(https://img.freepik.com/free-vector/blue-cyber-future-technology-concept-background_42077-488.jpg?size=626&ext=jpg);
   background-size: cover;
   font-family: "Open Sans Condensed", sans-serif;
   color: white;
