--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+:root {
+  background-color: rgb(24, 24, 24);
+}
+
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  font-size: 62.5%;
+  font-family: "Space Mono", monospace;
 }
-/**/
 body {
   margin: 0 auto;
   text-align: center;
@@ -12,62 +17,143 @@ body {
   background-position: center;
   background-image: url(https://img.freepik.com/free-vector/blue-cyber-future-technology-concept-background_42077-488.jpg?size=626&ext=jpg);
   background-size: cover;
-  font-family: "Open Sans Condensed", sans-serif;
+  font-family: "Inter", sans-serif;
   color: white;
 }
-.navbar {
-  margin: 5px;
-  padding: 5px;
+h1 {
+  font-size: 42px;
+  color: #fff;
+  margin-bottom: 80px;
 }
 
-header {
-  padding: 30px;
-  position: relative;
+h2 {
+  font-size: 50px;
+  margin-bottom: 64px;
 }
 
-div.card {
-  padding: 100px;
-  position: relative;
-  color: rgb(230, 230, 230);
+.container {
+  width: 100vw;
+  height: 100vh;
+  max-width: 80rem;
+  margin: 0 auto;
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-ul {
-  margin: 100px;
+.flex-column {
+  display: flex;
+  flex-direction: column;
 }
 
-button {
-  padding: 5px;
-  border-radius: 10px;
-  font-size: 20px;
-  color: white;
-  background-color: rgb(176, 196, 222);
+.flex-center {
+  justify-content: center;
+  align-items: center;
 }
 
-ul {
-  list-style: none;
+.justify-center {
+  justify-content: center;
 }
 
-li {
-  padding: 10px;
-  margin: 10px;
-  font-size: 22px;
-  background-color: rgb(3, 126, 156);
+.text-center {
+  text-align: center;
 }
 
-#indicator {
-  font-style: italic;
-  font-size: 60px;
+.hidden {
+  display: none;
 }
 
-.highscore-element {
-  font-size: 18px;
-  text-align: left;
-  color: white;
-  padding: 10px;
-  margin: 10px;
-  padding-left: 30px;
-  background-color: rgb(2, 194, 241);
+.btn {
+  font-size: 28px;
+  padding: 2rem 0;
+  width: 30rem;
+  text-align: center;
+  margin-bottom: 16px;
+  text-decoration: none;
+  color: rgb(28, 26, 26);
+  background: linear-gradient(
+    90deg,
+    rgb(18, 92, 255) 0%,
+    rgb(0, 102, 255) 100%
+  );
+  border-radius: 8px;
 }
+
+.btn:hover {
+  cursor: pointer;
+  box-shadow: 0 0.4rem 1.4rem 0 rgba(3, 85, 185, 0.6);
+  transition: transform 150ms;
+  transform: scale(1.03);
+}
+
+.btn[disabled]:hover {
+  box-shadow: none;
+  transform: none;
+  cursor: not-allowed;
+}
+
+#highscore-btn {
+  background: linear-gradient(
+    90deg,
+    rgb(252, 244, 17) 0%,
+    rgb(255, 235, 19) 100%
+  );
+}
+
+#highscore-btn:hover {
+  box-shadow: 0 0.4rem 1.4rem 0 rgba(240, 240, 1, 0.5);
+}
+
+.fa-crown {
+  font-size: 2.5rem;
+  margin-left: 1rem;
+}
+
+/* EndPage CSS */
+.end-form-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 30rem;
+}
+
+input {
+  margin-bottom: 1rem;
+  width: 20rem;
+  padding: 1.5rem;
+  font-size: 1.8rem;
+  border: none;
+  box-shadow: 0 0.1rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+}
+
+input::placeholder {
+  color: #aaa;
+}
+
+#username {
+  margin-bottom: 3rem;
+  width: 100%;
+  outline: none;
+}
+
+#end-text {
+  font-size: 2.4rem;
+  color: #fff;
+  text-align: center;
+}
+
+#saveScoreBtn {
+  border: none;
+}
+
+.fa-home {
+  margin-left: 1rem;
+  font-size: 2rem;
+  color: rgb(28, 26, 26);
+}
+
 #sticky-footer {
   opacity: 40%;
   margin-bottom: 15px;
