--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
   font-size: 62.5%;
   font-family: "Space Mono", monospace;
 }
-body {
+/* body {
   margin: 0 auto;
   text-align: center;
   background-repeat: no-repeat;
@@ -19,7 +19,7 @@ body {
   background-size: cover;
   font-family: "Inter", sans-serif;
   color: white;
-}
+} */
 h1 {
   font-size: 42px;
   color: #fff;
