--- a/highscores.css
+++ b/highscores.css
@@ -1,13 +1,13 @@
 body {
-    color: white;
+  color: white;
 }
-
+/**/
 #highScoresList {
-    list-style: none;
-    margin-bottom: 4rem;
+  list-style: none;
+  margin-bottom: 4rem;
 }
 
 .high-score {
-    font-size: 44.8px;
-    margin-bottom: 8px;
+  font-size: 44.8px;
+  margin-bottom: 8px;
 }
