--- a/css/game.css
+++ b/css/game.css
@@ -76,6 +76,10 @@ body {
   width: 0%;
 }
 
+.hud-item {
+  text-align: center;
+}
+
 @media screen and (max-width: 768px) {
   .choice-container {
     min-width: 40rem;
